# mcu_server

./: .gitignore  CMakeLists.txt  README.md  include-project.cmake
app/: CMakeLists.txt
app/movement_app/: CMakeLists.txt
app/movement_app/include/: file_raw_data_reader.hpp  movement_host.hpp  movement_host_builder.hpp  movement_ipc_data_infra.hpp  movement_ipc_data_reader.hpp  movement_ipc_data_writer.hpp  movement_json_api_request_parser.hpp  movement_json_api_response_serializer.hpp  request_json_transformer.hpp  response_json_transformer.hpp
app/movement_app/resourses/: test_data.json
app/stepper_motor_app/: CMakeLists.txt
app/thermostat_app/: CMakeLists.txt
apps/: CMakeLists.txt
apps/include/: gpio_app_types.hpp  gpio_host.hpp  gpio_ipc_factory.hpp
apps/tests/: CMakeLists.txt
engine/: CMakeLists.txt
engine/data/: CMakeLists.txt
engine/include/: engine.hpp
engine/tests/: CMakeLists.txt
engine/utils/: CMakeLists.txt
factory/: CMakeLists.txt
factory/gpio_tasks_factory/: CMakeLists.txt
factory/include/: default_mcu_factory_parsers.hpp  factory.hpp  mcu_factory.hpp  mcu_factory_parsers.hpp  mcu_task_creator.hpp  parser.hpp  serializer.hpp  task_creator.hpp  transformer.hpp
factory/stepper_motor_tasks_factory/: CMakeLists.txt
factory/tasks/: CMakeLists.txt
factory/tests/: CMakeLists.txt
host/: CMakeLists.txt
host/include/: host.hpp  host_instance.hpp
host/tests/: CMakeLists.txt
host/tools/: CMakeLists.txt
ipc/: CMakeLists.txt
ipc/api_request_reader/: CMakeLists.txt
ipc/custom_ipc_server/: CMakeLists.txt
ipc/include/: api_request_reader_builder.hpp  api_response_writer_builder.hpp  buffered_ipc_connection.hpp  buffered_ipc_server.hpp  buffered_ipc_server_config.hpp  buffered_package_reader.hpp  clonable_ipc_data_reader.hpp  clonable_ipc_data_writer.hpp  custom_data_reader.hpp  custom_data_writer.hpp  custom_ipc_server.hpp  data_buffer.hpp  data_reader.hpp  data_writer.hpp  http_ipc_connection.hpp  http_ipc_server.hpp  ipc_clonable.hpp  ipc_config.hpp  ipc_connection.hpp  ipc_data.hpp  ipc_data_reader.hpp  ipc_data_writer.hpp  ipc_instance.hpp  ipc_option.hpp  ipc_queue.hpp  ipc_reader_builder.hpp  ipc_request_handler.hpp  ipc_result.hpp  ipc_server.hpp  ipc_server_factory.hpp  ipc_types.hpp  ipc_writer_builder.hpp  package_header.hpp  package_writer.hpp  protobuf_input_stream_builder.hpp  protobuf_ipc_server.hpp  request_reader.hpp  response_writer.hpp  ring_buffer.hpp  shared_ipc_data_reader.hpp  (+3 more)
ipc/json/: CMakeLists.txt
ipc/package_reader/: CMakeLists.txt
ipc/protobuf/: CMakeLists.txt
ipc/protobuf_ipc_server/: CMakeLists.txt
ipc/raw_data_package/: CMakeLists.txt
ipc/sized_package/: CMakeLists.txt
ipc/src/: http_ipc_connection.cpp
ipc/tests/: CMakeLists.txt
ipc/tools/: CMakeLists.txt
ipc/util/: CMakeLists.txt
manager/: CMakeLists.txt
manager/gpio_manager/: CMakeLists.txt
manager/include/: custom_manager.hpp  in_memory_inventory.hpp  inventory.hpp  inventory_manager.hpp  manager.hpp  manager_clonable.hpp  manager_config.hpp  manager_factory.hpp  manager_instance.hpp  manager_instance_reference.hpp  provider.hpp  providers.hpp  requests_manager.hpp
manager/movement_manager/: CMakeLists.txt  changelog.md
manager/requests_manager/: CMakeLists.txt
manager/stepper_motor_manager/: CMakeLists.txt
manager/tests/: CMakeLists.txt
manager/thermostat_manager/: CMakeLists.txt
manager/utils/: CMakeLists.txt
platform/: CMakeLists.txt
platform/include/: delay.hpp  inventory.hpp  ipc_server.hpp  message_receiver.hpp  message_sender.hpp  platform.hpp
platform/stepper_motor/: CMakeLists.txt
platform/tests/: CMakeLists.txt
platform/util/: CMakeLists.txt
server/: CMakeLists.txt
server/include/: gpo.hpp  inventory.hpp  inventory_task.hpp  server.hpp  server_factory.hpp  server_task_engine.hpp  server_tasks.hpp
server/task_engine/: CMakeLists.txt
server/tests/: CMakeLists.txt
servers/: CMakeLists.txt
servers/include/: cnc_server.hpp  test_http_cnc_server.hpp
servers/src/: test_http_cnc_server.cpp
servers/tests/: CMakeLists.txt
service/: CMakeLists.txt
service/include/: service.hpp  vendor_instance.hpp
service/movement_service/: CMakeLists.txt
service/tests/: CMakeLists.txt
service/thermostat_service/: CMakeLists.txt
service/thermostat_vendor/: CMakeLists.txt
stepper_motor_tasks_factory/: CMakeLists.txt
stepper_motor_tasks_factory/include/: default_stepper_motor_data_parser.hpp  stepper_motor_data_parser.hpp  stepper_motor_tasks_factory.hpp
stepper_motor_tasks_factory/tasks/: CMakeLists.txt
stepper_motor_tasks_factory/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/include/: mcu_server_fixture.hpp  server_fixture.hpp  test_case.hpp  test_gpi.hpp  test_gpo.hpp  test_ipc_connection.hpp  test_resource.hpp
tests/src/: e2e_mcu_control.cpp  test_case.cpp  ut_host.cpp  ut_mcu_server.cpp  ut_server.cpp  ut_vendor.cpp
tools/: CMakeLists.txt
tools/include/: data_buffer.hpp  ring_data_buffer.hpp
util/: CMakeLists.txt
util/include/: buffered_ipc_connection.hpp  buffered_message_receiver.hpp  custom_creator.hpp  custom_listener.hpp  custom_parser.hpp  custom_receiver.hpp  custom_sender.hpp  custom_server.hpp  custom_task.hpp  data_encoder_decoder.hpp  data_extractor.hpp  decoding_data_parser.hpp  encoding_data_serializer.hpp  http_ipc_connection.hpp  json_data_parser.hpp  json_data_postparser.hpp  json_data_preparser.hpp  json_data_serializer.hpp  json_request_parser.hpp  json_response_serializer.hpp  zlib_compressor.hpp  zlib_decompressor.hpp
util/src/: json_data_parser.cpp  json_data_postparser.cpp  json_data_preparser.cpp  json_data_serializer.cpp
util/tests/: CMakeLists.txt
utils/: CMakeLists.txt
utils/include/: functional_connection.hpp  functional_creator.hpp  functional_listener.hpp  functional_parser.hpp  functional_serializer.hpp  serial_connection.hpp  server_creator.hpp  server_factory.hpp  server_inventory.hpp  server_parser.hpp  server_serializer.hpp  server_task.hpp  task_factory.hpp
utils/parse/: CMakeLists.txt
utils/tests/: CMakeLists.txt
(+430 files in other folders)
